# sundial

./: CMakeLists.txt
srs/: sundial.cpp
